tests/errors/backend/ranges/infinite.fpcore
; --range-analysis interval
(FPCore (x)
 :pre (< 0 x 1)
 (/ 1 x))
